--- a/multi-get-tester/requirements.txt
+++ b/multi-get-tester/requirements.txt
@@ -1,11 +1,15 @@
 certifi==2018.10.15
+chardet==3.0.4
 cycler==0.10.0
+idna==2.8
 kiwisolver==1.0.1
 matplotlib==3.0.2
 numpy==1.16.1
 pipenv==2018.10.13
 pyparsing==2.3.1
 python-dateutil==2.8.0
+requests==2.21.0
 six==1.12.0
+urllib3==1.24.1
 virtualenv==16.0.0
 virtualenv-clone==0.4.0
