--- a/multi-get-tester/.vscode/settings.json
+++ b/multi-get-tester/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "env/bin/python"
+  "python.pythonPath": "env/bin/python",
+  "python.formatting.autopep8Args": [
+    "--max-line-length=120"
+  ]
 }
