--- a/functions/pigo-openfaas/stack.yml
+++ b/functions/pigo-openfaas/stack.yml
@@ -1,17 +1,18 @@
 provider:
   name: faas
   gateway: http://127.0.0.1:8080
+
 functions:
-  exponential-loop:
+  pigo-face-detector:
     lang: go
-    handler: ./exponential-loop
-    image: exponential-loop:latest
+    handler: ./pigo-openfaas
+    image: esimov/pigo-openfaas:0.1
     labels:
       # disable auto-scaling
       com.openfaas.scale.min: 1
       com.openfaas.scale.max: 1
     environment:
-      write_timeout: "300"
-      read_timeout: "300"
-      mi: 1
-      loops_for_time_unit: 28000000
+      input_mode: "image"
+      output_mode: "image"
+      write_timeout: "100"
+      read_timeout: "100"
