--- a/benchmark/requirements.txt
+++ b/benchmark/requirements.txt
@@ -1,15 +1,21 @@
-certifi==2018.10.15
+astroid==2.2.5
+autopep8==1.4.3
+certifi==2019.3.9
 chardet==3.0.4
 cycler==0.10.0
 idna==2.8
+isort==4.3.15
 kiwisolver==1.0.1
-matplotlib==3.0.2
-numpy==1.16.1
-pipenv==2018.10.13
+lazy-object-proxy==1.3.1
+matplotlib==3.0.3
+mccabe==0.6.1
+numpy==1.16.2
+pycodestyle==2.5.0
+pylint==2.3.1
 pyparsing==2.3.1
 python-dateutil==2.8.0
 requests==2.21.0
 six==1.12.0
+typed-ast==1.3.1
 urllib3==1.24.1
-virtualenv==16.0.0
-virtualenv-clone==0.4.0
+wrapt==1.11.1
