--- a/functions/faas-sleep-fn/sleep.yml
+++ b/functions/faas-sleep-fn/sleep.yml
@@ -6,3 +6,10 @@ functions:
     lang: go
     handler: ./sleep
     image: sleep:latest
+    labels:
+      # disable auto-scaling
+      com.openfaas.scale.min: 1
+      com.openfaas.scale.max: 1
+    environment:
+      write_timeout: "300"
+      read_timeout: "300"
