--- a/functions/faas-sleep-fn/sleep2.yml
+++ b/functions/faas-sleep-fn/sleep2.yml
@@ -6,3 +6,10 @@ functions:
     lang: python
     handler: ./sleep2
     image: sleep2:latest
+    labels:
+      # disable auto-scaling
+      com.openfaas.scale.min: 1
+      com.openfaas.scale.max: 1
+    environment:
+      write_timeout: "300"
+      read_timeout: "300"
