--- a/functions/pigo-openfaas-f/stack.yml
+++ b/functions/pigo-openfaas-f/stack.yml
@@ -3,10 +3,10 @@ provider:
   gateway: http://127.0.0.1:8080
 
 functions:
-  pigo-face-detector:
+  pigo-face-detector-f:
     lang: go
     handler: ./src/pigo-openfaas
-    image: esimov/pigo-openfaas:0.1
+    image: esimov/pigo-openfaas-f:0.1
     labels:
       # disable auto-scaling
       com.openfaas.scale.min: 1
