Moved pigo arm to goland

--- a/functions/pigo-openfaas-arm/stack.yml
+++ b/functions/pigo-openfaas-arm/stack.yml
@@ -5,7 +5,7 @@ provider:
 functions:
   pigo-face-detector:
     lang: go-armhf
-    handler: ./pigo-openfaas
+    handler: ./src/pigo-openfaas
     image: esimov/pigo-openfaas:0.1
     labels:
       # disable auto-scaling
