--- a/functions/pigo-openfaas-arm/src/pigo-openfaas/Gopkg.toml
+++ b/functions/pigo-openfaas-arm/src/pigo-openfaas/Gopkg.toml
@@ -27,12 +27,13 @@
 
 [[constraint]]
   name = "github.com/esimov/pigo"
-  version = "1.0.2"
+  revision = "6dbb9e779c598e4d166536c5f5d7a85c8f0e0955" # lock to 1.0.2 version
 
 [[constraint]]
   name = "github.com/fogleman/gg"
-  version = "1.1.0"
+  version = "1.3.0"
 
 [prune]
   go-tests = true
   unused-packages = true
+
