--- a/benchmark/requirements.txt
+++ b/benchmark/requirements.txt
@@ -13,6 +13,7 @@ pylint==2.4.2
 pyparsing==2.4.2
 python-dateutil==2.8.0
 requests==2.22.0
+scipy==1.3.1
 six==1.12.0
 typed-ast==1.4.0
 urllib3==1.25.6
