Updated pigo-openfaas-f function

--- a/functions/pigo-openfaas-f/stack.yml
+++ b/functions/pigo-openfaas-f/stack.yml
@@ -13,6 +13,6 @@ functions:
       com.openfaas.scale.max: 1
     environment:
       input_mode: "image"
-      output_mode: "image"
+      output_mode: "values"
       write_timeout: "100"
       read_timeout: "100"
