--- a/benchmark/.vscode/settings.json
+++ b/benchmark/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "python.pythonPath": "env/bin/python",
-  "python.formatting.autopep8Args": ["--max-line-length=120"],
+  "python.formatting.autopep8Args": [
+    "--max-line-length=120"
+  ],
   "python.linting.pylintEnabled": true
 }
