--- a/benchmark/.vscode/settings.json
+++ b/benchmark/.vscode/settings.json
@@ -2,5 +2,6 @@
   "python.formatting.autopep8Args": [
     "--max-line-length=120"
   ],
-  "python.linting.pylintEnabled": true
+  "python.linting.pylintEnabled": true,
+  "compile-hero.disable-compile-files-on-did-save-code": true
 }
