Fixed network measurements

--- a/benchmark/monitoring/stack/telegraf/telegraf.conf
+++ b/benchmark/monitoring/stack/telegraf/telegraf.conf
@@ -109,7 +109,7 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-  urls = ["http://influxdb:8086"]
+  urls = ["http://localhost:8086"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
@@ -125,7 +125,7 @@
   ## If true, no CREATE DATABASE queries will be sent.  Set to true when using
   ## Telegraf with a user without permissions to create databases or when the
   ## database already exists.
-  # skip_database_creation = false
+  skip_database_creation = true
 
   ## Name of existing retention policy to write to.  Empty string writes to
   ## the default retention policy.  Only takes effect when using HTTP.
@@ -4194,12 +4194,12 @@
 
 
 # # Read metrics about network interface usage
-# [[inputs.net]]
+[[inputs.net]]
 #   ## By default, telegraf gathers stats from any up interface (excluding loopback)
 #   ## Setting interfaces will tell it to gather these explicit interfaces,
 #   ## regardless of status.
 #   ##
-#   # interfaces = ["eth0"]
+  interfaces = ["eth0"]
 #   ##
 #   ## On linux systems telegraf also collects protocol stats.
 #   ## Setting ignore_protocol_stats to true will skip reporting of protocol metrics.
