--- a/benchmark/requirements.txt
+++ b/benchmark/requirements.txt
@@ -1,20 +1,17 @@
-astroid==2.3.1
-certifi==2019.9.11
-chardet==3.0.4
+astroid==2.4.2
+certifi==2020.6.20
 cycler==0.10.0
-idna==2.8
-isort==4.3.21
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
-matplotlib==3.1.1
+isort==5.6.4
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+matplotlib==3.3.2
 mccabe==0.6.1
-numpy==1.17.2
-pylint==2.4.2
-pyparsing==2.4.2
-python-dateutil==2.8.0
-requests==2.22.0
-scipy==1.3.1
-six==1.12.0
-typed-ast==1.4.0
-urllib3==1.25.6
-wrapt==1.11.2
+numpy==1.19.4
+Pillow==8.0.0
+pylint==2.6.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+scipy==1.5.4
+six==1.15.0
+toml==0.10.1
+wrapt==1.12.1
